CloudletToVmMappingSolution refactoring
Returns an immutable list in convertMapEntryListToCloudletList()

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>